Fix module-info not visible